# RollingPolarsOLS

./: .gitignore  README.md  pyproject.toml
polars_rolling_ols/: __init__.py  rolling_ols.py
tests/: rolling_ols.py
