[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rolling-polars-ols"
version = "0.1.0"
description = "A  Rolling OLS wrapper that is compatible with Polars timeseries"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "--cov=my_package --cov-report=term-missing"
testpaths = ["tests"]